lib/hir-mir/src/transformation/snapshots/hir_mir__transformation__map_literal__tests__transform_empty_map.snap
---
source: lib/hir-mir/src/transformation/map_literal.rs
expression: "transform(&Context::dummy(Default::default(), Default::default()),\n    &Map::new(types::None::new(Position::fake()),\n            types::None::new(Position::fake()), vec![], Position::fake()))"
---
Ok(
    Let(
        Let {
            name: Some(
                "$ctx",
            ),
            type_: Some(
                Reference(
                    Reference(
                        ReferenceInner {
                            name: "mapContext",
                            position: Position(
                                PositionInner {
                                    path: "",
                                    line_number: 1,
                                    column_number: 1,
                                    line: "",
                                },
                            ),
                        },
                    ),
                ),
            ),
            bound_expression: Call(
                Call {
                    function_type: Some(
                        Function(
                            Function(
                                FunctionInner {
                                    arguments: [],
                                    result: Reference(
                                        Reference(
                                            ReferenceInner {
                                                name: "mapContext",
                                                position: Position(
                                                    PositionInner {
                                                        path: "",
                                                        line_number: 1,
                                                        column_number: 1,
                                                        line: "",
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                    position: Position(
                                        PositionInner {
                                            path: "",
                                            line_number: 1,
                                            column_number: 1,
                                            line: "",
                                        },
                                    ),
                                },
                            ),
                        ),
                    ),
                    function: Variable(
                        Variable {
                            name: "hir:map:context:829f738c8f9ee2f4",
                            position: Position(
                                PositionInner {
                                    path: "",
                                    line_number: 1,
                                    column_number: 1,
                                    line: "",
                                },
                            ),
                        },
                    ),
                    arguments: [],
                    position: Position(
                        PositionInner {
                            path: "",
                            line_number: 1,
                            column_number: 1,
                            line: "",
                        },
                    ),
                },
            ),
            expression: Call(
                Call {
                    function_type: Some(
                        Function(
                            Function(
                                FunctionInner {
                                    arguments: [],
                                    result: Reference(
                                        Reference(
                                            ReferenceInner {
                                                name: "genericMap",
                                                position: Position(
                                                    PositionInner {
                                                        path: "",
                                                        line_number: 1,
                                                        column_number: 1,
                                                        line: "",
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                    position: Position(
                                        PositionInner {
                                            path: "",
                                            line_number: 1,
                                            column_number: 1,
                                            line: "",
                                        },
                                    ),
                                },
                            ),
                        ),
                    ),
                    function: Variable(
                        Variable {
                            name: "emptyMap",
                            position: Position(
                                PositionInner {
                                    path: "",
                                    line_number: 1,
                                    column_number: 1,
                                    line: "",
                                },
                            ),
                        },
                    ),
                    arguments: [],
                    position: Position(
                        PositionInner {
                            path: "",
                            line_number: 1,
                            column_number: 1,
                            line: "",
                        },
                    ),
                },
            ),
            position: Position(
                PositionInner {
                    path: "",
                    line_number: 1,
                    column_number: 1,
                    line: "",
                },
            ),
        },
    ),
)
