lib/hir-mir/src/transformation/snapshots/hir_mir__transformation__map_literal__tests__transform_map_with_entry.snap
---
source: lib/hir-mir/src/transformation/map_literal.rs
expression: "transform(&Context::dummy(Default::default(), Default::default()),\n    &Map::new(types::None::new(Position::fake()),\n            types::None::new(Position::fake()),\n            vec![MapEntry ::\n                new(None :: new(Position :: fake()), None ::\n                new(Position :: fake()), Position :: fake()).into()],\n            Position::fake()))"
---
Ok(
    Let(
        Let {
            name: Some(
                "$ctx",
            ),
            type_: Some(
                Reference(
                    Reference(
                        ReferenceInner {
                            name: "mapContext",
                            position: Position(
                                PositionInner {
                                    path: "",
                                    line_number: 1,
                                    column_number: 1,
                                    line: "",
                                },
                            ),
                        },
                    ),
                ),
            ),
            bound_expression: Call(
                Call {
                    function_type: Some(
                        Function(
                            Function(
                                FunctionInner {
                                    arguments: [],
                                    result: Reference(
                                        Reference(
                                            ReferenceInner {
                                                name: "mapContext",
                                                position: Position(
                                                    PositionInner {
                                                        path: "",
                                                        line_number: 1,
                                                        column_number: 1,
                                                        line: "",
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                    position: Position(
                                        PositionInner {
                                            path: "",
                                            line_number: 1,
                                            column_number: 1,
                                            line: "",
                                        },
                                    ),
                                },
                            ),
                        ),
                    ),
                    function: Variable(
                        Variable {
                            name: "hir:map:context:829f738c8f9ee2f4",
                            position: Position(
                                PositionInner {
                                    path: "",
                                    line_number: 1,
                                    column_number: 1,
                                    line: "",
                                },
                            ),
                        },
                    ),
                    arguments: [],
                    position: Position(
                        PositionInner {
                            path: "",
                            line_number: 1,
                            column_number: 1,
                            line: "",
                        },
                    ),
                },
            ),
            expression: Call(
                Call {
                    function_type: Some(
                        Function(
                            Function(
                                FunctionInner {
                                    arguments: [
                                        Reference(
                                            Reference(
                                                ReferenceInner {
                                                    name: "mapContext",
                                                    position: Position(
                                                        PositionInner {
                                                            path: "",
                                                            line_number: 1,
                                                            column_number: 1,
                                                            line: "",
                                                        },
                                                    ),
                                                },
                                            ),
                                        ),
                                        Reference(
                                            Reference(
                                                ReferenceInner {
                                                    name: "genericMap",
                                                    position: Position(
                                                        PositionInner {
                                                            path: "",
                                                            line_number: 1,
                                                            column_number: 1,
                                                            line: "",
                                                        },
                                                    ),
                                                },
                                            ),
                                        ),
                                        Any(
                                            Any {
                                                position: Position(
                                                    PositionInner {
                                                        path: "",
                                                        line_number: 1,
                                                        column_number: 1,
                                                        line: "",
                                                    },
                                                ),
                                            },
                                        ),
                                        Any(
                                            Any {
                                                position: Position(
                                                    PositionInner {
                                                        path: "",
                                                        line_number: 1,
                                                        column_number: 1,
                                                        line: "",
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    result: Reference(
                                        Reference(
                                            ReferenceInner {
                                                name: "genericMap",
                                                position: Position(
                                                    PositionInner {
                                                        path: "",
                                                        line_number: 1,
                                                        column_number: 1,
                                                        line: "",
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                    position: Position(
                                        PositionInner {
                                            path: "",
                                            line_number: 1,
                                            column_number: 1,
                                            line: "",
                                        },
                                    ),
                                },
                            ),
                        ),
                    ),
                    function: Variable(
                        Variable {
                            name: "setMap",
                            position: Position(
                                PositionInner {
                                    path: "",
                                    line_number: 1,
                                    column_number: 1,
                                    line: "",
                                },
                            ),
                        },
                    ),
                    arguments: [
                        Variable(
                            Variable {
                                name: "$ctx",
                                position: Position(
                                    PositionInner {
                                        path: "",
                                        line_number: 1,
                                        column_number: 1,
                                        line: "",
                                    },
                                ),
                            },
                        ),
                        Call(
                            Call {
                                function_type: Some(
                                    Function(
                                        Function(
                                            FunctionInner {
                                                arguments: [],
                                                result: Reference(
                                                    Reference(
                                                        ReferenceInner {
                                                            name: "genericMap",
                                                            position: Position(
                                                                PositionInner {
                                                                    path: "",
                                                                    line_number: 1,
                                                                    column_number: 1,
                                                                    line: "",
                                                                },
                                                            ),
                                                        },
                                                    ),
                                                ),
                                                position: Position(
                                                    PositionInner {
                                                        path: "",
                                                        line_number: 1,
                                                        column_number: 1,
                                                        line: "",
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                ),
                                function: Variable(
                                    Variable {
                                        name: "emptyMap",
                                        position: Position(
                                            PositionInner {
                                                path: "",
                                                line_number: 1,
                                                column_number: 1,
                                                line: "",
                                            },
                                        ),
                                    },
                                ),
                                arguments: [],
                                position: Position(
                                    PositionInner {
                                        path: "",
                                        line_number: 1,
                                        column_number: 1,
                                        line: "",
                                    },
                                ),
                            },
                        ),
                        TypeCoercion(
                            TypeCoercion {
                                from: None(
                                    None {
                                        position: Position(
                                            PositionInner {
                                                path: "",
                                                line_number: 1,
                                                column_number: 1,
                                                line: "",
                                            },
                                        ),
                                    },
                                ),
                                to: Any(
                                    Any {
                                        position: Position(
                                            PositionInner {
                                                path: "",
                                                line_number: 1,
                                                column_number: 1,
                                                line: "",
                                            },
                                        ),
                                    },
                                ),
                                argument: None(
                                    None {
                                        position: Position(
                                            PositionInner {
                                                path: "",
                                                line_number: 1,
                                                column_number: 1,
                                                line: "",
                                            },
                                        ),
                                    },
                                ),
                                position: Position(
                                    PositionInner {
                                        path: "",
                                        line_number: 1,
                                        column_number: 1,
                                        line: "",
                                    },
                                ),
                            },
                        ),
                        TypeCoercion(
                            TypeCoercion {
                                from: None(
                                    None {
                                        position: Position(
                                            PositionInner {
                                                path: "",
                                                line_number: 1,
                                                column_number: 1,
                                                line: "",
                                            },
                                        ),
                                    },
                                ),
                                to: Any(
                                    Any {
                                        position: Position(
                                            PositionInner {
                                                path: "",
                                                line_number: 1,
                                                column_number: 1,
                                                line: "",
                                            },
                                        ),
                                    },
                                ),
                                argument: None(
                                    None {
                                        position: Position(
                                            PositionInner {
                                                path: "",
                                                line_number: 1,
                                                column_number: 1,
                                                line: "",
                                            },
                                        ),
                                    },
                                ),
                                position: Position(
                                    PositionInner {
                                        path: "",
                                        line_number: 1,
                                        column_number: 1,
                                        line: "",
                                    },
                                ),
                            },
                        ),
                    ],
                    position: Position(
                        PositionInner {
                            path: "",
                            line_number: 1,
                            column_number: 1,
                            line: "",
                        },
                    ),
                },
            ),
            position: Position(
                PositionInner {
                    path: "",
                    line_number: 1,
                    column_number: 1,
                    line: "",
                },
            ),
        },
    ),
)
