lib/hir-mir/src/transformation/snapshots/hir_mir__transformation__map_literal__tests__transform_map_with_spread_map.snap
---
source: lib/hir-mir/src/transformation/map_literal.rs
expression: "transform(&CompileContext::dummy(Default::default(), Default::default()),\n    &Map::new(types::None::new(Position::fake()),\n            types::None::new(Position::fake()),\n            vec![MapElement :: Map(None :: new(Position :: fake()).into())],\n            Position::fake()))"
---
Ok(
    Let(
        Let {
            name: Some(
                "$ctx",
            ),
            type_: Some(
                Reference(
                    Reference {
                        name: "mapContext",
                        position: Position {
                            path: "",
                            line_number: 1,
                            column_number: 1,
                            line: "",
                        },
                    },
                ),
            ),
            bound_expression: Call(
                Call {
                    function_type: Some(
                        Function(
                            Function {
                                arguments: [],
                                result: Reference(
                                    Reference {
                                        name: "mapContext",
                                        position: Position {
                                            path: "",
                                            line_number: 1,
                                            column_number: 1,
                                            line: "",
                                        },
                                    },
                                ),
                                position: Position {
                                    path: "",
                                    line_number: 1,
                                    column_number: 1,
                                    line: "",
                                },
                            },
                        ),
                    ),
                    function: Variable(
                        Variable {
                            name: "hir:map:context:829f738c8f9ee2f4",
                            position: Position {
                                path: "",
                                line_number: 1,
                                column_number: 1,
                                line: "",
                            },
                        },
                    ),
                    arguments: [],
                    position: Position {
                        path: "",
                        line_number: 1,
                        column_number: 1,
                        line: "",
                    },
                },
            ),
            expression: None(
                None {
                    position: Position {
                        path: "",
                        line_number: 1,
                        column_number: 1,
                        line: "",
                    },
                },
            ),
            position: Position {
                path: "",
                line_number: 1,
                column_number: 1,
                line: "",
            },
        },
    ),
)
